@@ -1886,44 +1886,44 @@ sub init_INSTALL {
     my %bin_layouts = 
     (
         bin         => { s => $iprefix,
-                         r => '$(PREFIX)',
+                         r => $u_prefix,
                          d => 'bin' },
         vendorbin   => { s => $vprefix,
-                         r => '$(VENDORPREFIX)',
+                         r => $u_vprefix,
                          d => 'bin' },
         sitebin     => { s => $sprefix,
-                         r => '$(SITEPREFIX)',
+                         r => $u_sprefix,
                          d => 'bin' },
         script      => { s => $iprefix,
-                         r => '$(PREFIX)',
+                         r => $u_prefix,
                          d => 'bin' },
     );
     
     my %man_layouts =
     (
         man1dir         => { s => $iprefix,
-                             r => '$(PREFIX)',
+                             r => $u_prefix,
                              d => 'man/man$(MAN1EXT)',
                              style => $manstyle, },
         siteman1dir     => { s => $sprefix,
-                             r => '$(SITEPREFIX)',
+                             r => $u_sprefix,
                              d => 'man/man$(MAN1EXT)',
                              style => $manstyle, },
         vendorman1dir   => { s => $vprefix,
-                             r => '$(VENDORPREFIX)',
+                             r => $u_vprefix,
                              d => 'man/man$(MAN1EXT)',
                              style => $manstyle, },
 
         man3dir         => { s => $iprefix,
-                             r => '$(PREFIX)',
+                             r => $u_prefix,
                              d => 'man/man$(MAN3EXT)',
                              style => $manstyle, },
         siteman3dir     => { s => $sprefix,
-                             r => '$(SITEPREFIX)',
+                             r => $u_sprefix,
                              d => 'man/man$(MAN3EXT)',
                              style => $manstyle, },
         vendorman3dir   => { s => $vprefix,
-                             r => '$(VENDORPREFIX)',
+                             r => $u_vprefix,
                              d => 'man/man$(MAN3EXT)',
                              style => $manstyle, },
     );
@@ -1931,28 +1931,28 @@ sub init_INSTALL {
     my %lib_layouts =
     (
         privlib     => { s => $iprefix,
-                         r => '$(PREFIX)',
+                         r => $u_prefix,
                          d => '',
                          style => $libstyle, },
         vendorlib   => { s => $vprefix,
-                         r => '$(VENDORPREFIX)',
+                         r => $u_vprefix,
                          d => '',
                          style => $libstyle, },
         sitelib     => { s => $sprefix,
-                         r => '$(SITEPREFIX)',
+                         r => $u_sprefix,
                          d => 'site_perl',
                          style => $libstyle, },
         
         archlib     => { s => $iprefix,
-                         r => '$(PREFIX)',
+                         r => $u_prefix,
                          d => "$version/$arch",
                          style => $libstyle },
         vendorarch  => { s => $vprefix,
-                         r => '$(VENDORPREFIX)',
+                         r => $u_vprefix,
                          d => "$version/$arch",
                          style => $libstyle },
         sitearch    => { s => $sprefix,
-                         r => '$(SITEPREFIX)',
+                         r => $u_sprefix,
                          d => "site_perl/$version/$arch",
                          style => $libstyle },
     );
